# docs

./: .env.example  .gitignore  Caddyfile  Cargo.toml  Makefile  backup.sh  bamako-auth.service  bamako-sqld.service  deploy.sh  dev.sh  docker-compose.server.yml  docker-compose.sim.yml  docker-compose.yml  docmost-feature-comparison.md  modularization-plan.md  package-lock.json  package.json  restore.sh  tailwind.config.js  vite.config.ts
crates/bamako-synthesis/: Cargo.toml
crates/bamako-synthesis/src/: error.rs  lib.rs  llm.rs  prompts.rs
crates/bamako-synthesis/src/graph/: mod.rs  tasks.rs  types.rs
crates/bamako-synthesis/src/synthesis/: mod.rs  types.rs
crates/bamako-synthesis/src/vector/: mod.rs  veles.rs
crates/bamako-synthesis/src/wiki/: mod.rs
scripts/: generate-invite.sh  setup-server.sh
services/auth/: go.mod  main.go
src/: app.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  lib.rs  main.rs  state.rs  types.rs
src-tauri/src/commands/: db.rs  graph_synthesis.rs  import.rs  mod.rs  oauth.rs  prompts.rs  settings.rs  sync.rs  synthesis.rs  vector.rs
src-tauri/tests/: db_sync_test.rs  vector_test.rs
src/lib/: api.ts  stores.ts
src/lib/components/: ActivityPanel.svelte  Dashboard.svelte  DiffModal.svelte  Editor.svelte  EditorPlaceholder.svelte  FirstLaunchModal.svelte  GraphView.svelte  ImportModal.svelte  SearchResults.svelte  SettingsModal.svelte  Sidebar.svelte  TopBar.svelte
src/routes/: +layout.svelte  +page.svelte
