[package]
name = "bamako"
version = "0.1.0"
edition = "2021"
build = "build.rs"
default-run = "bamako"

[lib]
name = "bamako_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "bamako"
path = "src/main.rs"

[[bin]]
name = "seed"
path = "src/bin/seed.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
libsql = "0.6"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nanoid = "0.4"
reqwest = { version = "0.12", features = ["rustls-tls", "json", "blocking"], default-features = false }
sha2 = "0.10"
hex = "0.4"
urlencoding = "2"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp"] }
bamako-synthesis = { path = "../crates/bamako-synthesis" }

[dev-dependencies]
uuid = { version = "1", features = ["v4"] }
