[package]
name = "bamako-synthesis"
version = "0.1.0"
edition = "2021"
description = "LLM-driven knowledge synthesis: page summarization, entity extraction, knowledge graph, wiki generation, vector search"
license = "MIT OR Apache-2.0"

[features]
default = ["veles"]
veles = []
config-loader = ["dep:toml"]
test-utils = []

[dependencies]
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
graph-flow = "0.5"
async-trait = "0.1"
nanoid = "0.4"
tokio = { version = "1", features = ["full"] }
thiserror = "1"
toml = { version = "0.8", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
